--- a/ansible-web.yml
+++ b/ansible-web.yml
@@ -1,22 +1,26 @@
 ---
-- hosts: hosts
+- hosts: AWS
   vars:
     http_port: 80
-  remote_user: root
-  tasks: 
-  - name: install httpd
-    apt-get:
+  become: true
+  become_user: ubuntu
+  become_method: sudo
+
+  tasks:
+  - name: ensure apache is at the latest version
+    apt:
       name: httpd
       state: latest
-      
-  -file:
-    path: /var/www/html/index.html
-    content:
-      <BR> <h2> Hello World V1 made by Ansible through Terraform. </h2>
-      <BR>
-      <h2> IP Address:  #{node['ipaddress']} </h2>
-      <h2> HostName: #{node['hostname']} </h2>
-  - name: up apache service
+  - copy:
+      content: |
+               <BR> <h2> Hello World V1 made by Ansible through Terraform. <BR></h2>
+      dest: /var/www/html/index.html
+  - name: ensure apache is running
     service:
       name: httpd
       state: started
+  handlers:
+    - name: restart apache
+      service:
+        name: httpd
+        state: restarted
