--- a/ansible-web.yml
+++ b/ansible-web.yml
@@ -1,5 +1,5 @@
 ---
-#sudo ansible-playbook ansible_web.yml --private-key=/home/ubuntu/.ssh/Jmy_Key_AWS_Apr_2018.pem
+#sudo ansible-playbook ansible-web.yml --private-key=/home/ubuntu/.ssh/Jmy_Key_AWS_Apr_2018.pem
 - hosts: AWS
   vars:
     http_port: 80
